--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <body>
     <div class="father">
-      <div class="box">1</div>
-      <div class="box">2</div>
-      <div class="box">3</div>
+      <div class="child">1</div>
+      <div class="child">2</div>
+      <div class="child">3</div>
     </div>
   </body>
 </html>
