--- a/grid_3.html
+++ b/grid_3.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="grid_3.css" />
     <title>(S)CSS Masterclass</title>
   </head>
 
   <body>
-    <div class="father">
-      <div class="child">1</div>
-      <div class="child">2</div>
-      <div class="child">3</div>
+    <div class="grid">
+      <div class="header">header</div>
+      <div class="content">content</div>
+      <div class="nav">nav</div>
+      <div class="footer">footer</div>
     </div>
   </body>
 </html>
